updateModel 推迟 懒加载 所需的运行时数据
很多情况下是不需要有些数据的。延迟这些数据加载能有效提升性能